Add subpage fish and meat

--- a/pasta.html
+++ b/pasta.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="rice.css">
+        <link rel="stylesheet" type="text/css" href="pasta.css">
         <title>How to cook rice</title>
     </head>
     <body>
