Center images on main page

--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css">
         <title>Beginner's guide to cooking</title>
     </head>
     <body>
         <h1>This website will teach how to cook some basic recipes, click one of the images below to see the recipes</h1>
         <a href="rice.html">
-            <img src="https://storage.needpix.com/rsynced_images/rice-1441603639BQw.jpg" alt="Rice">
+            <img src="https://storage.needpix.com/rsynced_images/rice-1441603639BQw.jpg" alt="Rice" class="center">
         </a>
         <a href="pasta.html">
-            <img src="https://live.staticflickr.com/7920/32383718307_2550c2aae5_b.jpg" alt="Pasta">
+            <img src="https://live.staticflickr.com/7920/32383718307_2550c2aae5_b.jpg" alt="Pasta" class="center">
         </a>
         <a href="meat.html">
-            <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg" alt="Meat">
+            <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg" alt="Meat" class="center">
         </a>
         <a href="fish.html">
-            <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg" alt="Fish">
+            <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg" alt="Fish" class="center">
         </a>
     </body>
 </html>
