--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
         <link rel="stylesheet" type="text/css" href="main.css">
         <title>Beginner's guide to cooking</title>
     </head>
+    
     <body>
         <h1>This website will teach how to cook some basic recipes, click one of the images below to see the recipes</h1>
-        <a href="rice.html">
-            <img src="https://storage.needpix.com/rsynced_images/rice-1441603639BQw.jpg" alt="Rice" class="center">
-        </a>
-        <a href="pasta.html">
-            <img src="https://live.staticflickr.com/7920/32383718307_2550c2aae5_b.jpg" alt="Pasta" class="center">
-        </a>
-        <a href="meat.html">
-            <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg" alt="Meat" class="center">
-        </a>
-        <a href="fish.html">
-            <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg" alt="Fish" class="center">
-        </a>
+        <div class="row">
+            <div class="column">
+                <a href="rice.html">
+                    <img src="https://storage.needpix.com/rsynced_images/rice-1441603639BQw.jpg" alt="Rice" style="width:100%">
+                </a>
+            </div>
+            <div class="column">
+                <a href="pasta.html">
+                    <img src="https://live.staticflickr.com/7920/32383718307_2550c2aae5_b.jpg" alt="Pasta" style="width:100%">
+                </a>
+            </div>
+            <div class="column">
+                <a href="meat.html">
+                    <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg" alt="Meat" style="width:100%">
+                </a>
+            </div>
+            <div class="column">
+                <a href="fish.html">
+                    <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg" alt="Fish" style="width:100%">
+                </a>
+            </div>
+          </div> 
     </body>
 </html>
