--- a/fish.html
+++ b/fish.html
@@ -5,22 +5,24 @@
         <link rel="stylesheet" type="text/css" href="meat.css">
         <title>How to cook fish</title>
     </head>
-    <body>
+    <<body>
         <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg">
-        <h1>How to cook fish</h1>
-        <p>Ingredients</p>
+        <h1>How to prepare fish fillets</h1>
+        <h2>Ingredients</h2>
         <ul>
-            <li></li>
-            <li></li>
+            <li>A bottle of oil</li>
+            <li>Thin salt</li>
+            <li>1 or 2 fish fillets</li>
+            <li>A pan</li>
+        
         </ul>
-        <p>Steps</p>
+        <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+           <li>Prepare a pan and put it on a high temperature for 3 minutes</li>
+           <li>Add a small amount of oil</li>
+           <li>As soon as the oil begins to smoke, salt the fillets and place them in the pan</li>
+           <li>Make sure to lower the heat to medium if the filets are thick, or keep it high if the fillets are thin</li>
+           <li>Let the fish cook for 3 minutes, and then flip it and let it cook for 1 minute</li>
         </ol>
     </body>
 </html>
