--- a/fish.html
+++ b/fish.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="meat.css">
         <title>How to cook fish</title>
     </head>
-    <<body>
+    <body>
         <img src="https://images.pexels.com/photos/8758/food-dinner-lemon-rice.jpg?cs=srgb&dl=delicious-dinner-fish-8758.jpg&fm=jpg">
         <h1>How to prepare fish fillets</h1>
         <h2>Ingredients</h2>
