--- a/meat.html
+++ b/meat.html
@@ -7,20 +7,22 @@
     </head>
     <body>
         <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg">
-        <h1>How to cook meat</h1>
+        <h2>How to cook steak</h2>
         <p>Ingredients</p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>A pan or barbecue</li>
+            <li>Olive oil</li>
+            <li>Sea salt</li>
+            <li>Black pepper/li>
+            <li>butter</li>
         </ul>
         <p>Steps</p>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Rub the steak along with some olive oil, sea salt and black pepper</li>
+            <li>Place the steak in a pan to a medium temperature for 6 minutes, constantly flipping it</li>
+            <li>Use butter to rub on the steak to give it a better taste</li>
+            <li>Once it has been cooked, place if finally on a plate and let it rest for 2 minutes</li>
+           
         </ol>
     </body>
 </html>
