--- a/meat.html
+++ b/meat.html
@@ -13,7 +13,7 @@
             <li>A pan or barbecue</li>
             <li>Olive oil</li>
             <li>Sea salt</li>
-            <li>Black pepper/li>
+            <li>Black pepper</li>
             <li>butter</li>
         </ul>
         <p>Steps</p>
