--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="column">
                 <a href="meat.html">
-                    <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg" alt="Meat" style="width:100%">
+                    <img src="https://live.staticflickr.com/7859/40230073333_c5fb59abf9_b.jpg" alt="Meat" style="width:100%">
                 </a>
             </div>
             <div class="column">
