--- a/meat.html
+++ b/meat.html
@@ -6,7 +6,7 @@
         <title>How to cook meat</title>
     </head>
     <body>
-        <img src="https://get.pxhere.com/photo/dish-meal-food-cooking-meat-barbecue-cuisine-asian-food-grilling-barbecue-grill-human-action-outdoor-grill-96775.jpg">
+        <img src="https://live.staticflickr.com/7859/40230073333_c5fb59abf9_b.jpg">
         <h2>How to cook steak</h2>
         <p>Ingredients</p>
         <ul>
