Updated CSS and html

--- a/pasta.html
+++ b/pasta.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="pasta.css">
-        <title>How to cook rice</title>
+        <title>How to cook pasta</title>
     </head>
     <body>
         <img src="https://live.staticflickr.com/7920/32383718307_2550c2aae5_b.jpg">
